# linkmend

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: journal-format.md  link-rules.md
examples/: README.md  reorganize.sh
examples/sample-vault/: index.md
examples/sample-vault/Journal/: 2026-07-06.md
examples/sample-vault/Projects/: Alpha.md  Beta.md
scripts/: smoke.sh
src/linkmend/: __init__.py  __main__.py  apply.py  check.py  cli.py  errors.py  journal.py  links.py  plan.py  resolve.py  rewrite.py  vault.py
tests/: conftest.py  test_apply_journal.py  test_check_backlinks.py  test_cli.py  test_links.py  test_plan.py  test_resolve.py  test_rewrite.py  test_undo.py
