[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkmend"
version = "0.1.0"
description = "Move and rename Markdown notes while rewriting every Markdown and wiki link that points at them - with an undo journal, so vault refactors are reversible."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["markdown", "wiki-links", "notes", "refactoring", "obsidian", "backlinks", "undo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
linkmend = "linkmend.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/linkmend"
Repository = "https://github.com/JaydenCJ/linkmend"
Issues = "https://github.com/JaydenCJ/linkmend/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
